<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Meau</string>
    <string name="navigation_drawer_open">Abrir menu</string>
    <string name="navigation_drawer_close">Fechar menu</string>
    <string name="intro_text">Bem vindo ao Meau!\nAqui você pode adotar, doar e ajudar\ncães e gatos com facilidade.\nQual o seu interesse?</string>
    <string name="signup_message">Você não pode realizar esta ação sem possuir um cadastro</string>
    <string name="signin_message">Já possui cadastro?</string>
    <string name="signup_info">As informações preenchidas serão divulgadas apenas para a pessoa com a qual você realizar o processo de adoção e/ou apadrinhamento, após s formalização do processo.</string>
    <string name="login">login</string>
    <string name="logout">logout</string>
    <string name="facebook_app_id">193719447928535</string>
    <string name="fb_login_protocol_scheme">fb193719447928535</string>
    <string name="cadastro_animal_sucesso_message">O cadastro do seu pet foi realizado com sucesso!\n\nCertifique-se que permitiu o envio de notificações por push no campo privacidade do menu configurações do aplicativo. Assim, poderemos te avisar assim que alguém interessado entrar em contato!</string>
    <string name="remocao_animal_sucesso_message">Porém, as conversas relacionadas à ele serão mantidas para o caso de você desejar manter contato. Caso deseje apagá-las, você pode realizar esta ação nas configurações no chat dos usuários relacionados à este pet.</string>
    <string name="legislacao">Legislação</string>
    <string name="artigo_4.1">É permitida a realização de eventos de doação de cães e gatos em estabelecimentos devidamente legalizados.</string>
    <string name="artigo_4.2">§ 1º A feira só poderá ser realizada sob a responsabilidade de pessoa física ou jurídica, de direito público ou privado, sem fins lucrativos mantenedoras ou responsáveis por cães e gatos.</string>
    <string name="artigo_4.3">§ 2º Para identificação da entidade, associação, instituição ou pessoa promotora do evento é necessário a existência de uma placa, em local visível, no espaço de realização do evento de doação, contendo: nome do promotor, seja pessoa física ou jurídica, CPF ou CNPJ, com respectivo telefone.</string>
    <string name="artigo_4.4">§ 3º Pet shops ou clínicas veterinárias podem promover doações de animais, desde que haja identificação do responsável pela atividade, no local de exposição dos animais, atendendo-se às exigências previstas no parágrafo anterior.</string>
    <string name="artigo_4.5">§ 4º Os animais expostos para doação devem estar devidamente esterilizados e submetidos a controle de endo e ectoparasitas, bem como submetidos ao esquema de vacinação contra a raiva e doenças espécie-específicas, conforme respectiva faixa etária, mediante atestados.</string>
    <string name="artigo_5.1">As doações serão regidas por contrato específico, cujas obrigações previstas, por escrito, devem contemplar os dados qualificativos do animal, do adotante e do doador, as responsabilidades do adotante, as penalidades no caso de descumprimento, a permissão de monitoramento pelo doador e as condições de bem-estar e manutenção do animal.</string>
    <string name="artigo_5.2">Parágrafo único. Antes da consumação da doação e da assinatura do contrato, o potencial adotante deve ser amplamente informado e conscientizado sobre a convivência da família com um animal, noções de comportamento, expectativa de vida, provável porte do animal na fase adulta (no caso de filhotes), necessidades nutricionais e de saúde.</string>
    <string name="artigo_6">No ato da doação deve ser providenciado o RGA do animal, em nome do novo proprietário.</string>
    <string name="artigo_7">Aqueles elencados no § 1º do art. 4º podem cobrar taxa de adoção do animal, devendo para tanto fornecer ao adotante recibo especificando o valor da taxa e demais gastos.</string>
    <string name="privacidade_not">Notificações</string>
    <string name="chk_chat">Ativar notificações de chat</string>
    <string name="chk_recordacao">Ativar notificações de recordação</string>
    <string name="chk_eventos">Ativar notificações de eventos</string>
    <string name="privacy_message">Com as notificações de chat ativadas, você sempre receberá um aviso
        em seu celular quando alguém entrar em contato através do aplicativo.\n\nCom as configurações de
        recordação ativadas, você sempre será lembrado de entrar em contato com o doador (caso você adote
        um animal) a fim de cumprir o requisito de acompanhamento pós adoção.\n\nCom as notificações de
        evento ativadas, você sempre receberá uma notificação para lembrá-lo dos eventos da semana.\n</string>
    <string name="save_alt">Salvar Alterações</string>
    <string name="terms_message">O termo de adoção é um termo que oficializa o processo de adoção de um animal.
        Similarmente funciona o termo de apadrinhamento.\n\nÉ importante que o doador/dono exija a assinatura
        deste termo por parte do adotante/padrinho, de forma a ter prova legal de que a pessoa adquiriu o animal.
        Assim, podem ser tomadas providências legais em caso de maus tratos ou negligência ao animal.\n\n
        Para facilitar o processo, o Meau disponibiliza o termo aos seus doadores e donos de animais que utilizam
        o aplicativo para encontrar um destino e/ou ajuda para seu bichinho. Este termo é enviado por e-mail para
        que possa ser feita a impressão e, no momento de entrega do animal (ou quando o padrinho vai conhecê-lo),
        seja feita a assinatura por parte do adotante/padrinho.\n\nPressionando os botões abaixo, você receberá
        em seu email o termo em questão, nos formatos .doc (word) e .pdf.</string>
    <string name="termo_adocao">Termo de Adoção</string>
    <string name="termo_apadrinhamento">Termo de Apadrinhamento</string>
    <string name="termo_pronto">Pronto!</string>
    <string name="termo_enviado">O termo já foi enviado para o seu email. Caso não tenha recebido,
    verifique se o seu email está cadastrado corretamente na área “meu perfil”, no menu principal.\n\n Para entender um pouco mais sobre as
    leis que envolvem esse processo, acesse nossa área de legislação!</string>
    <string name="profile_picture">Foto de Perfil</string>
    <string name="profile_completename">Nome Completo</string>
    <string name="profile_age">Idade</string>
    <string name="profile_email">E-mail</string>
    <string name="profile_location">Localização</string>
    <string name="profile_adress">Endereço</string>
    <string name="profile_phone">Telefone</string>
    <string name="profile_username">Nome de Usuário</string>
    <string name="profile_history">Histórico</string>
    <string name="button_chat">Chat</string>
    <string name="button_history">Histórias</string>
    <string name="button_edit">Editar Perfil</string>
    <string name="no_histoty_text2"> ainda não contou nenhuma história pra gente!</string>
    <string name="no_histoty_text3">Mas você pode olhar as histórias de outros usuários. Temos certeza que será
    muito inspirador!</string>
    <string name="button_listar">Lista de Histórias</string>
    <string name="comportamento_1">Cão vs gato: qual deve ser o seu bichinho?</string>
    <string name="comportamento_2">Como lidar com pets muito agitados</string>
    <string name="comportamento_3">Porque alguns animais não gostam de crianças?</string>
    <string name="alimentacao_1">A importância de alimentar o pet com ração</string>
    <string name="alimentacao_2">Quais frutas você pode e não pode dar ao seu pet</string>
    <string name="alimentacao_3">Como escolho a melhor ração para o meu pet?</string>
    <string name="alimentacao_4">Socorro! Meu pet não quer mais comer ração!</string>
    <string name="saude_1">Como cortar as unhas do seu cachorro</string>
    <string name="saude_2">Mantendo a pele e pelagem de seu pet saudável</string>
    <string name="saude_3">Como identificar dor em cães?</string>
    <string name="saude_4">Nariz seco é sinal de doença?</string>
    <string name="saude_5">Colocando microchip em seu cachorro</string>
    <string name="saude_6">Vermes em cães e gatos</string>
    <string name="saude_7">Como limpar as orelhas de seu cachorro</string>
    <string name="saude_8">Livrando-se das pulgas e carrapatos!</string>
    <string name="saude_9">Câncer em cachorros</string>
    <string name="unhas_url" tools:ignore="TypographyDashes">https://firebasestorage.googleapis.com/v0/b/meau-unb.appspot.com/o/extras%2Funhas.jpg?alt=media&amp;token=a7752090-6c3e-4309-86db-53582df3dde3</string>
    <string name="text_saude_1">Se engana quem pensa que a manutenção em dia das unhas do cachorro é apenas por aparência. Na verdade, é um cuidado básico de saúde, já que, quando as unhas estão muito grandes, além de causar desconforto no animal quando ele se locomove, elas podem quebrar, deixando o pet aberto a uma infecção; ou envergar, influenciando em sua postura ou até mesmo perfurando a carne.\n\nGeralmente, pets que não passeiam muito, pets idosos, ou que têm mais contato com superfícies lisas (como os que moram em apartamento), precisam que suas unhas sejam cortadas mais vezes. No caso de animais mais ativos, as unhas são naturalmente reduzidas com o exercício.\n\nSeparamos informações e o passo a passo para tutores que desejam aprender a cortar a unha de seus cães em casa, sem depender sempre exclusivamente de groomers e médicos veterinários. Além disso, há dicas para tornar o momento menos estressante, para humanos e cachorros.</string>
    <string name="text_saude_2">POR QUE É PRECISO TER UM CUIDADO ESPECIAL NA HORA DE CORTAR AS UNHAS DO CÃO?</string>
    <string name="text_saude_3">A unha do cachorro possui vasos sanguíneos e nervos em seu eixo central, conhecido como  sabugo. Quando cortado, o cachorro sente muita dor e perde sangue.</string>
    <string name="text_saude_4">QUANTAS VEZES VOCÊ DEVE APARAR A UNHA DO SEU CACHORRO?</string>
    <string name="text_saude_5">Idealmente, corte a unha do seu cão a cada 1 ou 2 semanas e desde filhote. É importante não deixá-las muito grandes e sempre mantê-las no tamanho certo. Como a veia cresce à medida que a unha aumenta, se deixá-las sem cortar por muito tempo, a veia fica mais próxima da extremidade, assim ficando com uma chance maior de cortá-la.</string>
    <string name="text_saude_6">COMO SABER QUE ESTÁ NA HORA DE CORTAR A UNHA?</string>
    <string name="text_saude_7">Geralmente, quando você escutar o barulhinho das unhas batendo no chão, está na hora de apará-las. Uma vez que você começar a ser responsável por cortar as unhas, irá se acostumar ao tamanho e passará a saber visualmente se ela já está muito longa.</string>
    <string name="text_saude_8">COMO TRANSFORMAR O MOMENTO DE CORTAR AS UNHAS DO SEU CÃO MAIS TRANQUILO?</string>
    <string name="text_saude_9">É preciso acostumar o seu cachorro a, primeiramente, ser tocado nas patas. É comum ver cães que não se sentem confortáveis com esse momento, seja porque esse é uma área vulnerável, ou porque eles se machucaram cortando as unhas em outro momento e acabaram associando a algo negativo.\n\nGradativamente, vá tocando na pata do seu cão, relacionando a algo gostoso e uma troca entre tutor e pet. Uma massagem de leve na almofada, respeitando o tempo do seu cão.\n\nE quando falamos em respeitar o tempo, tudo vai depender de cada animal. O importante é que você continue tentando, todos os dias e nos momentos que o seu cão está bem tranquilo. Exemplos: Está vendo televisão, os dois juntinhos no sofá? Faça massagem! Após, vá evoluindo e toque não só na pata, mas também nas unhas.</string>
    <string name="text_saude_10">CORTANDO A UNHA DO SEU CACHORRO</string>
</resources>