<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/privacidade"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginEnd="24dp"
    android:layout_marginStart="24dp"
    android:paddingTop="16dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/termo_texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fontFamily="sans-serif"
        android:text="@string/terms_message"
        android:textColor="@color/cinza_medio" />

    <Button
        android:id="@+id/button_termoadocao"
        android:layout_width="232dp"
        android:layout_height="50dp"
        android:layout_below="@+id/termo_texto"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/cinza_button"
        android:fontFamily="sans-serif"
        android:text="@string/termo_adocao"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/button_termoapadrinhamento"
        android:layout_width="232dp"
        android:layout_height="50dp"
        android:layout_below="@+id/button_termoadocao"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif"
        android:backgroundTint="@color/cinza_button"
        android:text="@string/termo_apadrinhamento"
        android:textAllCaps="true" />

</RelativeLayout>