<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/buttons"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="112dp"
                android:layout_height="112dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/profile_picture"
                android:src="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/profileinfo_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="sans-serif"
                    android:text="Nome do Usuário"
                    android:textColor="#434343" />

            <TextView
                android:id="@+id/profileinfo_fullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif"
                android:text="@string/profile_completename"
                android:textAllCaps="true"
                android:textColor="#589b9b"
                android:textSize="12sp" />

                <TextView
                    android:id="@+id/profileinfo_user_fullname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif"
                    android:text="Nome Completo da Silva"
                    android:textColor="#757575" />

            <TextView
                android:id="@+id/profileinfo_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif"
                android:text="@string/profile_age"
                android:textAllCaps="true"
                android:textColor="#589b9b"
                android:textSize="12sp" />

                <TextView
                    android:id="@+id/profileinfo_user_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif"
                    android:text="Idade"
                    android:textColor="#757575" />

            <TextView
                android:id="@+id/profileinfo_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif"
                android:text="@string/profile_email"
                android:textAllCaps="true"
                android:textColor="#589b9b"
                android:textSize="12sp" />

                <TextView
                    android:id="@+id/profileinfo_user_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif"
                    android:text="Email@unb.br"
                    android:textColor="#757575" />

                <TextView
                    android:id="@+id/profileinfo_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/profile_location"
                    android:textAllCaps="true"
                    android:textColor="#589b9b" />

                <LinearLayout
                    android:id="@+id/profile_user_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/profileinfo_user_city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="sans-serif"
                        android:text="Cidade"
                        android:textColor="#757575" />

                    <TextView
                        android:id="@+id/profileinfo_user_state"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="sans-serif"
                        android:text="Cidade"
                        android:textColor="#757575" />

                </LinearLayout>

            <TextView
                android:id="@+id/profileinfo_adress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif"
                android:text="@string/profile_adress"
                android:textAllCaps="true"
                android:textColor="#589b9b"
                android:textSize="12sp" />

                <TextView
                    android:id="@+id/profileinfo_user_adress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif"
                    android:text="Rua de baixo 4"
                    android:textColor="#757575" />

            <TextView
                android:id="@+id/profileinfo_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif"
                android:text="@string/profile_phone"
                android:textAllCaps="true"
                android:textColor="#589b9b"
                android:textSize="12sp" />

                <TextView
                    android:id="@+id/profileinfo_user_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif"
                    android:text="000000000"
                    android:textColor="#757575" />

            <TextView
                android:id="@+id/profileinfo_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif"
                android:text="@string/profile_username"
                android:textAllCaps="true"
                android:textColor="#589b9b"
                android:textSize="12sp" />

                <TextView
                    android:id="@+id/profileinfo_user_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif"
                    android:text="000000000"
                    android:textColor="#757575" />

            <TextView
                android:id="@+id/profileinfo_historycount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif"
                android:text="@string/profile_history"
                android:textAllCaps="true"
                android:textColor="#589b9b"
                android:textSize="12sp" />

                <TextView
                    android:id="@+id/profileinfo_user_historycount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif"
                    android:text="000000000"
                    android:textColor="#757575" />


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/buttons_userprofile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.0">

            <Button
                android:id="@+id/button_profile_chat"
                android:layout_width="148dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="0.5"
                android:backgroundTint="@color/verde2"
                android:fontFamily="sans-serif"
                android:text="@string/button_chat"
                android:textAllCaps="true"
                android:textSize="12sp" />

            <Button
                android:id="@+id/button_profile_history"
                android:layout_width="148dp"
                android:layout_height="40dp"
                android:layout_weight="0.5"
                android:backgroundTint="@color/verde2"
                android:fontFamily="sans-serif"
                android:text="@string/button_history"
                android:textAllCaps="true"
                android:textSize="12sp" />
        </LinearLayout>

            <LinearLayout
                android:id="@+id/buttons_myprofile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="28dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_profile_edit"
                    android:layout_width="148dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/verde2"
                    android:fontFamily="sans-serif"
                    android:text="@string/button_edit"
                    android:textAllCaps="true"
                    android:textSize="12sp" />

    </LinearLayout>
</RelativeLayout>
